--- a/src/style/ghbtn.css
+++ b/src/style/ghbtn.css
@@ -59,258 +59,4 @@
     background-size: 50px 45px;
   }
 }
-@font-face {
-  font-family: 'jsorg';
-  src: url(../font/jsorg.eot?3za8g4);
-  src: url(../font/jsorg.eot?#iefix3za8g4) format('embedded-opentype'), url(../font/jsorg.woff?3za8g4) format('woff'), url(../font/jsorg.ttf?3za8g4) format('truetype'), url(../font/jsorg.svg?3za8g4#jsorg) format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-.icon {
-  font-family: 'jsorg';
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-html {
-  background-color: #ffb400;
-}
-html.no-js,
-html.ie8 {
-  background: url(../background.png) #ffb400 repeat-y fixed;
-}
-body {
-  color: #333333;
-  font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
-  line-height: 1.5;
-  -webkit-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  text-size-adjust: 100%;
-}
-::selection {
-  color: #ffb400;
-  background-color: #333333;
-}
-a {
-  color: #333333;
-  outline: none;
-  border: none;
-  text-decoration: none;
-}
-header,
-main,
-footer {
-  display: block;
-  max-width: 800px;
-  padding: 0 5%;
-  margin: 50px auto;
-}
-header #logo {
-  font-size: 4em;
-  color: #ffffff;
-}
-header #social {
-  float: right;
-  margin: 2em 0 0 0;
-  list-style: none;
-  padding: 0;
-}
-header #social li {
-  display: inline;
-}
-header #social li a {
-  display: inline-block;
-  margin-left: 0.2em;
-  width: 2em;
-  line-height: 2em;
-  text-align: center;
-  color: #ffffff;
-  -moz-transition: all .3s;
-  -o-transition: all .3s;
-  -webkit-transition: all .3s;
-  transition: all .3s;
-}
-header #social li a.facebook {
-  background: #3c5a98;
-}
-header #social li a.facebook:hover {
-  color: #3c5a98;
-}
-header #social li a.twitter {
-  background: #54a3db;
-}
-header #social li a.twitter:hover {
-  color: #54a3db;
-}
-header #social li a.googleplus {
-  background: #de4b3b;
-}
-header #social li a.googleplus:hover {
-  color: #de4b3b;
-}
-header #social li a:hover {
-  background: #ffffff;
-  background: rgba(255, 255, 255, 0.5);
-}
-header h1 {
-  clear: both;
-  font-family: 'Source Serif Pro', Georgia, Times, serif;
-  font-size: 1em;
-  font-weight: 400;
-  border-top: 2px solid #ffffff;
-  color: #ffffff;
-  margin: 0;
-}
-main #typewriter {
-  font-size: 3em;
-  margin: 0;
-}
-main #typewriter #hermes {
-  -moz-transition: all .2s .1s;
-  -o-transition: all .2s .1s;
-  -webkit-transition: all .2s .1s;
-  transition: all .2s .1s;
-}
-main #typewriter #hermes.active {
-  padding-right: .1em;
-  border-right: 0.06em solid #333333;
-}
-main a {
-  font-weight: 700;
-  -moz-transition: all .2s .1s;
-  -o-transition: all .2s .1s;
-  -webkit-transition: all .2s .1s;
-  transition: all .2s .1s;
-}
-main a:hover {
-  color: #664800;
-}
-main p.bigger {
-  font-size: 1.5em;
-}
-main section {
-  position: relative;
-  padding: 1em 0;
-}
-main section input {
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  left: -999px;
-}
-main section input:checked + article {
-  display: inline-block;
-}
-main section input#s1I:checked ~ nav #s1L,
-main section input#s2I:checked ~ nav #s2L,
-main section input#s3I:checked ~ nav #s3L,
-main section input#s4I:checked ~ nav #s4L {
-  background-color: #ffffff;
-}
-main section nav {
-  display: inline-table;
-  border-collapse: collapse;
-  margin: 0;
-}
-main section nav label {
-  cursor: pointer;
-  display: table-cell;
-  border: 2px solid #ffffff;
-  border-top: none;
-  left: 0;
-  font-weight: 700;
-  font-size: 1em;
-  height: 2em;
-  width: 2em;
-  line-height: 2em;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-  -moz-transition: all .3s;
-  -o-transition: all .3s;
-  -webkit-transition: all .3s;
-  transition: all .3s;
-}
-main section nav label:hover {
-  background-color: rgba(255, 255, 255, 0.5);
-}
-main section article {
-  display: none;
-  background-color: #ffffff;
-  margin: 0;
-  padding: 1.2em;
-}
-main section article h3 {
-  float: left;
-  color: #ffb400;
-  border-right: 2px solid #ffb400;
-  font-size: 6em;
-  width: 1em;
-  padding-top: .2em;
-  text-align: center;
-  line-height: .75em;
-  font-weight: 700;
-  margin: -0.2em 0.3em 0.1em -0.2em;
-}
-main h4 {
-  margin-bottom: .5em;
-}
-main code {
-  font-family: 'Source Code Pro', "Courier New", Courier, monospace;
-  font-size: .8em;
-}
-footer {
-  font-size: .8em;
-  color: #ffffff;
-}
-footer #star {
-  position: relative;
-  border-bottom: 2px solid #ffffff;
-  margin-bottom: .2em;
-}
-footer #contribution {
-  float: right;
-}
-footer a {
-  color: inherit;
-  text-decoration: underline;
-  padding: 0 .2em;
-}
-footer a:hover {
-  color: #333333;
-}
-#zodiac {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-@media screen and (max-width: 55em) {
-  main section article h3 {
-    font-size: 2em;
-    padding-top: .4em;
-    margin: -0.6em 0.6em 0 0;
-  }
-  main #typewriter {
-    font-size: 2em;
-  }
-}
-@media screen and (max-width: 30em) {
-  main #typewriter {
-    font-size: 1.5em;
-    font-weight: 700;
-  }
-  main code,
-  p b {
-    display: none;
-  }
-}
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=ghbtn.css.map */
