--- a/src/style/main.css
+++ b/src/style/main.css
@@ -86,6 +86,8 @@ html.ie8 {
   background: url('../../background.png') #ffb400 repeat-y fixed;
 }
 body {
+  padding: 0;
+  margin: 0;
   color: #333333;
   font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
   line-height: 1.5;
