--- a/src/style/main.less
+++ b/src/style/main.less
@@ -15,6 +15,8 @@ html {
 }
 
 body {
+    padding: 0;
+    margin: 0;
     color: @cText;
     font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
     line-height: 1.5;
