--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-﻿.ghbtn {
+.ghbtn {
   display: inline-block;
   line-height: 1.2em;
   font-weight: 800;
@@ -61,8 +61,8 @@
 }
 @font-face {
   font-family: 'jsorg';
-  src: url(../font/jsorg.eot?3za8g4);
-  src: url(../font/jsorg.eot?#iefix3za8g4) format('embedded-opentype'), url(../font/jsorg.woff?3za8g4) format('woff'), url(../font/jsorg.ttf?3za8g4) format('truetype'), url(../font/jsorg.svg?3za8g4#jsorg) format('svg');
+  src: url('../../font/jsorg.eot?3za8g4');
+  src: url('../../font/jsorg.eot?#iefix3za8g4') format('embedded-opentype'), url('../../font/jsorg.woff?3za8g4') format('woff'), url('../../font/jsorg.ttf?3za8g4') format('truetype'), url('../../font/jsorg.svg?3za8g4#jsorg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -83,9 +83,11 @@ html {
 }
 html.no-js,
 html.ie8 {
-  background: url(../background.png) #ffb400 repeat-y fixed;
+  background: url('../../background.png') #ffb400 repeat-y fixed;
 }
 body {
+  padding: 0;
+  margin: 0;
   color: #333333;
   font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
   line-height: 1.5;
@@ -313,4 +315,3 @@ footer a:hover {
     display: none;
   }
 }
-/*# sourceMappingURL=main.css.map */
