--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,4 +1,4 @@
-﻿.ghbtn {
+.ghbtn {
   display: inline-block;
   line-height: 1.2em;
   font-weight: 800;
@@ -315,4 +315,3 @@ footer a:hover {
     display: none;
   }
 }
-/*# sourceMappingURL=main.css.map */
