--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-   <title>JS.ORG</title>
+   <title>JS.ORG | DNS</title>
    <meta name="description" content="Free and short JS.ORG domains for GitHub Pages">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <!-- page generated {{ site.time | date_to_rfc822 }} -->
