--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
    <title>JS.ORG | DNS</title>
    <meta name="description" content="Free and short JS.ORG domains for GitHub Pages">
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="google-site-verification" content="FP5qQSG0Fx5uZ0_mpsUBwbI6lqzkxu1SXuoZjWuP0hU" />
    <!-- page generated {{ site.time | date_to_rfc822 }} -->
    {% include icon.html %}
    {% include ie8.html %}
