--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
    <title>JS.ORG | DNS</title>
-   <meta name="description" content="Free and short JS.ORG domains for GitHub Pages">
+   <meta name="description" content="Providing nice and free domains for GitHub Pages since 2015">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="google-site-verification" content="FP5qQSG0Fx5uZ0_mpsUBwbI6lqzkxu1SXuoZjWuP0hU" />
    <!-- page generated {{ site.time | date_to_rfc822 }} -->
