--- a/_includes/icon.html
+++ b/_includes/icon.html
@@ -1,10 +1,10 @@
-<link rel="apple-touch-icon-precomposed" sizes="57x57" href="http://js.org/icon/apple57.png" />
-   <link rel="apple-touch-icon-precomposed" sizes="60x60" href="http://js.org/icon/apple60.png" />
-   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://js.org/icon/apple72.png" />
-   <link rel="apple-touch-icon-precomposed" sizes="76x76" href="http://js.org/icon/apple76.png" />
-   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://js.org/icon/apple114.png" />
-   <link rel="apple-touch-icon-precomposed" sizes="120x120" href="http://js.org/icon/apple120.png" />
-   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://js.org/icon/apple144.png" />
-   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://js.org/icon/apple152.png" />
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://js.org/icon/apple57.png" />
+   <link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://js.org/icon/apple60.png" />
+   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://js.org/icon/apple72.png" />
+   <link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://js.org/icon/apple76.png" />
+   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://js.org/icon/apple114.png" />
+   <link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://js.org/icon/apple120.png" />
+   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://js.org/icon/apple144.png" />
+   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://js.org/icon/apple152.png" />
    <meta name="application-name"content="JS.ORG"/>
-   <meta name="msapplication-config" content="http://js.org/browserconfig.xml" />
+   <meta name="msapplication-config" content="https://js.org/browserconfig.xml" />
