--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
    {% endif %}
    <script>
       {% if page.ghstars %}{% include ghstars.html %}{% endif %}
-      {% include GA.html %}
+      {% include piwik.html %}
    </script>
 </body>
 </html>
