--- a/_includes/piwik.html
+++ b/_includes/piwik.html
@@ -1,9 +1,6 @@
 <script type="text/javascript">
-    var _paq = _paq || [];_paq.push(['trackPageView']);_paq.push(['enableLinkTracking']);
-    (function() {
-      var u="//piwik.js.org/";_paq.push(['setTrackerUrl', u+'piwik.php']);_paq.push(['setSiteId', 1]);
-      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-      g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-    })();
-  </script>
-  <noscript><p><img src="//piwik.js.org/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
+	  var _paq = _paq || [];_paq.push(["setDocumentTitle", document.domain + "/" + document.title]);_paq.push(["setCookieDomain", "*.js.org"]);_paq.push(['trackPageView']);_paq.push(['enableLinkTracking']);
+	  (function() {
+	    var u="//piwik.js.org/";_paq.push(['setTrackerUrl', u+'piwik.php']);_paq.push(['setSiteId', 2]);var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+	  })();</script>
+	<noscript><p><img src="//piwik.js.org/piwik.php?idsite=2" style="border:0;" alt="" /></p></noscript>
