--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
    <title>JS.ORG</title>
    <meta name="description" content="Free and short JS.ORG domains for GitHub Pages">
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="theme-color" content="#ffb400"/>
    <!-- page generated {{ site.time | date_to_rfc822 }} -->
    {% include icon.html %}
    {% include ie8.html %}
