--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,8 @@
    {% endif %}
    <script>
       {% if page.ghstars %}{% include ghstars.html %}{% endif %}
-      {% include GA.html %}
+      var _paq = _paq || [];_paq.push(["setDocumentTitle", document.domain + "/" + document.title]);_paq.push(["setCookieDomain", "*.js.org"]);_paq.push(['trackPageView']);_paq.push(['enableLinkTracking']);(function() {var u="//piwik.js.org/";_paq.push(['setTrackerUrl', u+'piwik.php']);_paq.push(['setSiteId', 2]);var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);})();
    </script>
+   <noscript><p><img src="//piwik.js.org/piwik.php?idsite=2" style="border:0;" alt="" /></p></noscript>
 </body>
 </html>
